<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.treeple_android.TreeActivity"
    tools:showIn="@layout/activity_tree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--error message -->
        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="@color/colorAccent"/>
        <!-- Options button -->
        <Button
            android:id="@+id/btnOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_option"/>
        <!-- Login button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_login"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Layout for creating tree-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Type species name of tree -->
                <EditText
                    android:id="@+id/speciesName"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/speciesName_hint" />
                <!-- Type height of tree -->
                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treeHeight_hint" />
                <!-- Choose municipality -->
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/municipality_label"/>
                <Spinner
                    android:id="@+id/municipalitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="0dp"/>
                <!-- Type diameter of tree-->
                <EditText
                    android:id="@+id/diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treeDiameter_hint" />
                <!-- Type latitude of tree  -->
                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treeLatitude_hint" />
                <!-- Type longitude of tree -->
                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treeLongitude_hint" />
                <!-- Type age of tree -->
                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treeAge_hint" />
                <!-- then create the tree -->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/addTree"
                    android:onClick="createTree"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
